# drone_trajectories

./: compute_velocity.py  data_distribution.py  generate_random_trajectories.py  plot_trajectory.py  pyproject.toml  trajectory_to_segments.py
trajectories/fpv_uzh/transformed_trajectories/: pos_stats.npz  vel_stats.npz
trajectories/fpv_uzh/transformed_trajectories/pos_trajectories_max_normalization/: max_norm_pos_indoor_forward_10_davis_with_gt.txt  max_norm_pos_indoor_forward_10_snapdragon_with_gt.txt  max_norm_pos_indoor_forward_3_davis_with_gt.txt  max_norm_pos_indoor_forward_3_snapdragon_with_gt.txt  max_norm_pos_indoor_forward_5_davis_with_gt.txt  max_norm_pos_indoor_forward_5_snapdragon_with_gt.txt  max_norm_pos_indoor_forward_6_davis_with_gt.txt  max_norm_pos_indoor_forward_6_snapdragon_with_gt.txt  max_norm_pos_indoor_forward_7_davis_with_gt.txt  max_norm_pos_indoor_forward_7_snapdragon_with_gt.txt  max_norm_pos_indoor_forward_9_davis_with_gt.txt  max_norm_pos_indoor_forward_9_snapdragon_with_gt.txt
trajectories/fpv_uzh/transformed_trajectories/pos_trajectories_whitening_normalization/: white_norm_pos_indoor_forward_10_davis_with_gt.txt  white_norm_pos_indoor_forward_10_snapdragon_with_gt.txt  white_norm_pos_indoor_forward_3_davis_with_gt.txt  white_norm_pos_indoor_forward_3_snapdragon_with_gt.txt  white_norm_pos_indoor_forward_5_davis_with_gt.txt  (+7 more)
trajectories/test_rand/: circle_10.txt  circle_13.txt  circle_14.txt  circle_21.txt  circle_27.txt  circle_71.txt  circle_77.txt  circle_91.txt  circle_96.txt  circle_99.txt
(+24 files in other folders)
